[package]
name = "rust_serialize_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = { path = "../../rust/flatbuffers", features=["serialize"] }
# The generated code uses `#[derive(serde::Serialize, serde::Deserialize)]`,
# which requires serde's `derive` feature (no longer pulled in transitively as
# of serde 1.0.228).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
