load("@aspect_rules_js//js:defs.bzl", "js_test")
load("//:typescript.bzl", "flatbuffer_ts_library")

package(default_visibility = ["//visibility:private"])

flatbuffer_ts_library(
    name = "typescript_ts_fbs",
    srcs = ["typescript_keywords.fbs"],
    deps = [
        "//tests/ts/test_dir:include_ts_fbs",
        "//tests/ts/test_dir:typescript_transitive_ts_fbs",
    ],
)

js_test(
    name = "javascript_test",
    chdir = package_name(),
    entry_point = "JavaScriptTest.js",
    data = [
        "package.json",
        "//:node_modules/flatbuffers",
        "//tests:test_data_copied_to_bin",
    ] + glob([
        "my-game/*.js",
        "my-game/example/*.js",
        "my-game/example2/*.js",
    ]),
    node_options = [
        "--trace-warnings",
    ],
)
